# otaro

./: .gitignore  404.html  README.md  index.html  objects.inv  poet.py  poet.yaml  pyproject.toml  sitemap.xml
.github/workflows/: deploy_docs.yml
acai/: parsing.py  providers.py  rule_utils.py  rules.py  task.py  task_utils.py  types.py  utils.py
acai/api/: __init__.py  server.py
acai/prompts/: user_prompt.py
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/css/: custom.css
docs/docs/learn/: access_prompt.md  deploy_config.md  optimize_prompt.md
docs/docs/learn/configure_tasks/: python.md  yaml.md
docs/docs/reference/: field.md  index.md  task.md
examples/: custom_rules.py  error.py  error.yml  planner.py  planner.yaml  planner.yml  poet.py  poet.yaml  poet.yml
learn/: index.html
learn/access_prompt/: index.html
learn/configure_tasks/python/: index.html
learn/configure_tasks/yaml/: index.html
learn/deploy_config/: index.html
learn/optimize_prompt/: index.html
otaro/: __init__.py  parsing.py  rule_utils.py  rules.py  task.py  task_utils.py  types.py
otaro/api/: __init__.py  server.py
otaro/prompts/: __init__.py  system_prompt.py  user_prompt.py
reference/: index.html
reference/field/: index.html
reference/task/: index.html
tests/: math.yaml  math.yml  math_system_prompt.txt  nested.yaml  nested.yml  nested_system_prompt.txt  nested_user_prompt.txt  poet.yaml  poet.yml  test_parsing.py  test_rule_utils.py  test_rules.py  test_task_load.py  test_task_run.py  test_types.py
