[project]
name = "auto-prompt-opt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dirtyjson>=1.0.8",
    "litellm>=1.61.13",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
]

[tool.uv]
dev-dependencies = [
    "pylint==3.3.1",
    "pylint-pydantic==0.3.2",
    "ruff>=0.7.3",
    "coverage==7.6.10",
    "pytest==8.3.4",
    "pytest-asyncio>=0.25.2",
]

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B", "I"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.pytest.ini_options]
log_cli = "True"
