[project]
name = "otaro"
version = "0.0.11"
description = "Auto-optimization of LLM tasks"
readme = "README.md"
authors = [
    { name = "Silanthro" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "dirtyjson>=1.0.8",
    "fastapi>=0.115.8",
    "fuzzywuzzy[speedup]>=0.18.0",
    "litellm>=1.61.16",
    "pydantic>=2.10.6",
    "pyparsing>=3.2.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.0",
]

[project.scripts]
otaro = "otaro.api:deploy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pylint==3.3.1",
    "pylint-pydantic==0.3.2",
    "ruff>=0.7.3",
    "coverage==7.6.10",
    "pytest==8.3.4",
    "pytest-asyncio>=0.25.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.5",
    "termynal>=0.13.0",
    "mkdocstrings[python]>=0.28.2",
    "griffe-typingdoc>=0.2.8",
]

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B", "I"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
log_cli = "True"
